[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "activitypunk"
version = "0.0.1"
authors = [
  { name="Jake Kara", email="jake@jakekara.com" },
]
description = "Tools for ActivityPub without a server."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jakekara/activitypunk"
"Bug Tracker" = "https://github.com/jakekara/activitypunk/issues"

[project.scripts]
apunk = "activitypunk.cli:main"